Fix invites count too close to text

--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -3,7 +3,6 @@ header
   margin-bottom: 10px
   display: flex
   justify-content: space-between
-  // align-items: center
 
 .header-title
   line-height: 1.35em
@@ -12,3 +11,7 @@ header
 .back
   a
     color: black
+
+.settings-invites-link
+  display: flex
+  justify-content: space-between
